publish: fix: typo
generated from commit 9eaf09ef863207e033311e193e10fc0e19b9638f

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="/bep20-generator/favicon.ico">
     <script src="/bep20-generator/assets/js/web3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?forceLang=en&amp;theme=momh&amp;thirdparty=1&amp;always=1&amp;noGeoIp=1&amp;scrolling=1&amp;hideDetailsBtn=1" defer="true"></script>
-    <meta name="description" content="Create an BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
+    <meta name="description" content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
     <meta property="twitter:title" content="BEP20 Token Generator | Create BEP20 Token for FREE">
     <meta property="og:title" content="BEP20 Token Generator | Create BEP20 Token for FREE">
-    <meta property="twitter:description" content="Create an BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
-    <meta property="og:description" content="Create an BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
+    <meta property="twitter:description" content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
+    <meta property="og:description" content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token. No login. No setup. No coding required.">
     <meta property="og:url" content="https://vittominacori.github.io/bep20-generator/">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
@@ -20,12 +20,12 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:image" content="https://vittominacori.github.io/bep20-generator/assets/images/bep20-token-generator.png">
     
-    <link rel="preload" href="/bep20-generator/assets/css/0.styles.334a4416.css" as="style"><link rel="preload" href="/bep20-generator/assets/js/app.87ad9115.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/4.bfe8764e.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/9.26312e0e.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/13.3b76a27c.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/7.3fc2d329.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/12.56447f23.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/11.54f4a7b3.js" as="script"><link rel="prefetch" href="/bep20-generator/assets/js/1.fef5c0e1.js"><link rel="prefetch" href="/bep20-generator/assets/js/10.d04ed721.js"><link rel="prefetch" href="/bep20-generator/assets/js/14.4bf3ca57.js"><link rel="prefetch" href="/bep20-generator/assets/js/15.008aba41.js"><link rel="prefetch" href="/bep20-generator/assets/js/16.bb43049d.js"><link rel="prefetch" href="/bep20-generator/assets/js/17.a85cba65.js"><link rel="prefetch" href="/bep20-generator/assets/js/18.04c86ec3.js"><link rel="prefetch" href="/bep20-generator/assets/js/19.fe9dde2c.js"><link rel="prefetch" href="/bep20-generator/assets/js/3.88d52df3.js"><link rel="prefetch" href="/bep20-generator/assets/js/5.64888374.js"><link rel="prefetch" href="/bep20-generator/assets/js/6.4239214c.js"><link rel="prefetch" href="/bep20-generator/assets/js/8.c3798641.js">
+    <link rel="preload" href="/bep20-generator/assets/css/0.styles.334a4416.css" as="style"><link rel="preload" href="/bep20-generator/assets/js/app.8107f108.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/4.bfe8764e.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/9.493c28af.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/13.3b76a27c.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/7.3fc2d329.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/12.7989cdad.js" as="script"><link rel="preload" href="/bep20-generator/assets/js/11.b87d4994.js" as="script"><link rel="prefetch" href="/bep20-generator/assets/js/1.4891496c.js"><link rel="prefetch" href="/bep20-generator/assets/js/10.d04ed721.js"><link rel="prefetch" href="/bep20-generator/assets/js/14.4bf3ca57.js"><link rel="prefetch" href="/bep20-generator/assets/js/15.008aba41.js"><link rel="prefetch" href="/bep20-generator/assets/js/16.bb43049d.js"><link rel="prefetch" href="/bep20-generator/assets/js/17.a85cba65.js"><link rel="prefetch" href="/bep20-generator/assets/js/18.04c86ec3.js"><link rel="prefetch" href="/bep20-generator/assets/js/19.fe9dde2c.js"><link rel="prefetch" href="/bep20-generator/assets/js/3.88d52df3.js"><link rel="prefetch" href="/bep20-generator/assets/js/5.64888374.js"><link rel="prefetch" href="/bep20-generator/assets/js/6.4239214c.js"><link rel="prefetch" href="/bep20-generator/assets/js/8.c3798641.js">
     <link rel="stylesheet" href="/bep20-generator/assets/css/0.styles.334a4416.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="page-wrapper"><nav class="navbar navbar-dark bg-dark navbar-expand-md"><button type="button" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button> <a href="/bep20-generator/" aria-current="page" target="_self" class="navbar-brand router-link-exact-active router-link-active"><svg viewBox="0 0 16 16" width="1em" height="1em" focusable="false" role="img" aria-label="house" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi-house b-icon bi"><g><path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/><path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/></g></svg></a> <div id="nav_collapse" class="navbar-collapse collapse" style="display:none;"><ul class="navbar-nav"><li class="nav-item"><a href="/bep20-generator/create-token/" target="_self" class="nav-link">Create BEP20 Token</a></li></ul> <ul class="navbar-nav ml-auto"><li class="nav-item"><a href="/bep20-generator/" aria-current="page" target="_self" class="nav-link router-link-exact-active router-link-active active">Home</a></li> <li class="nav-item"><a href="/bep20-generator/docs/" target="_self" class="nav-link">Docs</a></li> <li class="nav-item"><a href="https://medium.com/erc20generator" rel="noopener" target="_blank" class="nav-link"><small>Blog</small></a></li></ul></div></nav> <div><div class="jumbotron mb-0 blue-gradient jumbotron-fluid text-white"><div class="container"><h1 class="display-3">BEP20 Token Generator</h1><p class="lead">
-            Create an BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token.
+            Create a BEP20 Token in less than a minute with the new Smart Contract Generator for BEP20 Token.
             <br>
             No login. No setup. No coding required.
         </p> <hr class="my-5"> <p><a href="/bep20-generator/create-token/" target="_self" class="btn my-2 py-3 px-5 text-uppercase btn-success btn-lg">
@@ -33,7 +33,7 @@
             </a> <a href="#pricing" class="btn btn-lg btn-outline-light py-3 px-5 text-uppercase">
                 Pricing
             </a></p></div></div> <div id="how-it-works" class="row mx-0"><div class="mb-3 col-lg-8 offset-lg-2"><h2 class="p-5 font-weight-lighter text-center text-dark">How it works</h2> <h4 class="text-center font-weight-light">
-                Create an BEP20 Token in less than a minute.
+                Create a BEP20 Token in less than a minute.
             </h4> <p class="text-center font-weight-light">
                 Easily deploy Smart Contract for a Standard, Capped, Mintable, Burnable BEP20 Token.
                 <br>
@@ -102,7 +102,7 @@
             </p> <button type="button" class="btn my-5 py-3 px-5 text-uppercase btn-outline-warning btn-lg">
                 Let us know
             </button> <!----></div></div> <div id="faq" class="row purple-gradient mx-0"><div class="py-5 col-lg-12 col-xl-8 offset-xl-2"><h2 class="p-5 font-weight-lighter text-center text-light">FAQ</h2> <div itemscope="itemscope" itemtype="https://schema.org/FAQPage" class="faq-table"><div class="row"><div class="col"><div class="card mb-4 bg-light"><!----><!----><div class="card-body"><!----><!----><h3 class="font-weight-light">BEP20 Token Generator</h3> <p class="font-weight-light">
-                    Create an BEP20 Token in less than a minute with the new Smart Contract Generator for
+                    Create a BEP20 Token in less than a minute with the new Smart Contract Generator for
                     BEP20 Token. No login. No setup. No coding required.
                 </p> <hr class="my-4"> <h6 class="font-weight-light">The BEP20 Standard</h6> <p class="font-weight-light">
                     BEP20 defines the implementation of APIs for token smart contracts. It is proposed by deriving
@@ -327,6 +327,6 @@
                         <a href="https://vittominacori.github.io/" rel="noopener" target="_blank" class="text-warning">
                             vittominacori
                         </a></small></div></div></div></div> <!----></div></div><div class="global-ui"></div></div>
-    <script src="/bep20-generator/assets/js/app.87ad9115.js" defer></script><script src="/bep20-generator/assets/js/4.bfe8764e.js" defer></script><script src="/bep20-generator/assets/js/9.26312e0e.js" defer></script><script src="/bep20-generator/assets/js/13.3b76a27c.js" defer></script><script src="/bep20-generator/assets/js/7.3fc2d329.js" defer></script><script src="/bep20-generator/assets/js/12.56447f23.js" defer></script><script src="/bep20-generator/assets/js/11.54f4a7b3.js" defer></script>
+    <script src="/bep20-generator/assets/js/app.8107f108.js" defer></script><script src="/bep20-generator/assets/js/4.bfe8764e.js" defer></script><script src="/bep20-generator/assets/js/9.493c28af.js" defer></script><script src="/bep20-generator/assets/js/13.3b76a27c.js" defer></script><script src="/bep20-generator/assets/js/7.3fc2d329.js" defer></script><script src="/bep20-generator/assets/js/12.7989cdad.js" defer></script><script src="/bep20-generator/assets/js/11.b87d4994.js" defer></script>
   </body>
 </html>
